Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,4 +19,5 @@ steps:
     node --version
     npm install
     npm run build
-  displayName: 'npm install build'
+    node --version
+  displayName: 'npm install and build'
