--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ steps:
     cd /tmp &&\
     curl --silent -o- https://raw.githubusercontent.com/creationix/nvm/v0.31.2/install.sh | bash
     echo "variables de entorno" &&\
-    mkdir /usr/local/nvm &&\
+    sudo mkdir /usr/local/nvm &&\
     ENV NVM_DIR /usr/local/nvm &&\
     ENV NODE_VERSION 10.19.0 &&\
     printenv &&\
