--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,11 +24,12 @@ steps:
     npm --version
 - script: |
     echo "hola mundo p" &&\ 
-    cd /tmp &&\
-    curl --silent -o- https://raw.githubusercontent.com/creationix/nvm/v0.31.2/install.sh | bash
-    echo "variables de entorno" &&\
+    cd /tmp &&\    
     sudo mkdir /usr/local/nvm &&\
+    curl --silent -o /usr/local/nvm https://raw.githubusercontent.com/creationix/nvm/v0.31.2/install.sh | bash
+    echo "listando" &&\ 
     ls /usr/local/nvm &&\
+    echo "variables de entorno" &&\    
     MY_MESSAGE="Hello World parte 2" &&\
     echo $MY_MESSAGE &&\
     NVM_DIR="/usr/local/nvm" &&\
@@ -40,6 +41,5 @@ steps:
     nvm alias default $NODE_VERSION &&\
     nvm use default &&\
     ls /tmp
-    displayName: instación con nvn
 
   displayName: 'npm install and build'
