--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,15 +26,14 @@ steps:
     echo "hola mundo p" &&\ 
     cd /tmp &&\    
     sudo mkdir /usr/local/nvm &&\
-    curl --silent -o /usr/local/nvm https://raw.githubusercontent.com/creationix/nvm/v0.31.2/install.sh | bash
+    curl --silent -o /usr/local/nvm https://raw.githubusercontent.com/creationix/nvm/v0.31.2/install.sh | bash &&\
     echo "listando" &&\ 
     ls /usr/local/nvm &&\
     echo "variables de entorno" &&\    
     MY_MESSAGE="Hello World parte 2" &&\
     echo $MY_MESSAGE &&\
     NVM_DIR="/usr/local/nvm" &&\
-    NODE_VERSION="10.19.0" &&\
-    printenv &&\
+    NODE_VERSION="10.19.0" &&\ 
     echo "install node and npm" &&\
     source $NVM_DIR/nvm.sh &&\
     nvm install $NODE_VERSION &&\
