--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,16 +27,14 @@ steps:
     cd /tmp   
     sudo mkdir /usr/local/nvm 
     echo "curl" 
-    curl --silent -o /usr/local/nvm https://raw.githubusercontent.com/creationix/nvm/v0.31.2/install.sh | bash 
+    sudo curl -o /usr/local/nvm https://raw.githubusercontent.com/creationix/nvm/v0.31.2/install.sh | bash 
     echo "listando" 
     sudo touch /usr/local/nvm/prueba.txt
     ls /usr/local/nvm 
-    echo "variables de entorno"    
-    MY_MESSAGE="Hello World parte 2" 
-    echo $MY_MESSAGE 
-    NVM_DIR="/usr/local/nvm" &&\
-    NODE_VERSION="10.19.0" &&\ 
-    echo "install node and npm" &&\
+    echo "variables de entorno"
+    NVM_DIR="/usr/local/nvm"
+    NODE_VERSION="10.19.0"
+    echo "install node and npm"
     source $NVM_DIR/nvm.sh &&\
     nvm install $NODE_VERSION &&\
     nvm alias default $NODE_VERSION &&\
