Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -11,6 +11,8 @@ pool:
 
 steps:
 - script: |
+    echo "listar nvn instalado" 
+    sudo ls /Users/runner/.nvm
     node --version
     npm install
     npm run build
