Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -25,7 +25,8 @@ steps:
     npm -v
     echo "listar nvm"
     sudo ls ~/.nvm
-    echo "listar runners"
+    echo "ruta de : ~/.nvm"
+    cd ~/.nvm
     pwd
     sudo ls /Users/runner/runners/2.166.4/work/1/s
 - script: |
