Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -42,5 +42,7 @@ steps:
     nvm use default 
     echo " *************************** version de node" 
     node --version
+    sudo ls ~/.nvm
+    sudo printenv
 
   displayName: 'npm install and build'
