Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -43,6 +43,7 @@ steps:
     echo " *************************** version de node" 
     node --version
     sudo ls ~/.nvm
-    sudo printenv
+    cd ~/.nvm/versions
+    #sudo printenv
 
   displayName: 'npm install and build'
