Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -43,7 +43,8 @@ steps:
     echo " *************************** version de node" 
     node --version
     sudo ls ~/.nvm
-    cd ~/.nvm/versions
+     echo " *************************** cd versions" 
+    ls ~/.nvm/versions
     #sudo printenv
 
   displayName: 'npm install and build'
