Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -34,10 +34,10 @@ steps:
     #sudo curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.31.2/install.sh | bash 
     NVM_DIR="/Users/runner/.nvm"
     NODE_VERSION="14.1.0"
-    echo "install node and npm"
-    source $NVM_DIR/nvm.sh &&\
-    nvm install $NODE_VERSION &&\
-    nvm alias default $NODE_VERSION &&\
+    echo "*******************install node and npm"
+    #source $NVM_DIR/nvm.sh &&\
+    nvm install v$NODE_VERSION 
+    nvm alias default $NODE_VERSION 
     nvm use default 
     echo " *************************** version de node" 
     node --version 
