Update azure-pipelines-4.yml for Azure Pipelines

--- a/azure-pipelines-4.yml
+++ b/azure-pipelines-4.yml
@@ -11,6 +11,7 @@ pool:
 
 steps:
 - script: |
-    echo "hola mundo p" &&\ 
+    echo "hola mundo p" &&\
+    nvm --version
     
     displayName: instación con nvn
